--- a/dictionary.cabal
+++ b/dictionary.cabal
@@ -15,6 +15,8 @@ executable dictionary
         keyvalue >=0.1 && <0.2,
         http-conduit >=2.1 && <2.2,
         conduit-extra >=1.1 && <1.2,
-        conduit >=1.2 && <1.3
+        conduit >=1.2 && <1.3,
+        directory >=1.2 && <1.3,
+        cryptohash >=0.11 && <0.12
     main-is: Main.hs
     default-language: Haskell2010
